# wgpu_image

./: Cargo.toml
src/: lib.rs  shader.wgsl
